# biopathway-prediction

./: .gitattributes  .gitignore  LICENSE  README.md  config.toml  database_building.py  main.py  module.py  output_analysis.py  pyproject.toml  setup.cfg  setup.py
MS_workflow/: 1_get_data.sh  2-1_run_binary_prediction.sh  2-2_run_logistic_prediction.sh  2_run_prediction.sh
biopathpred/: cli.py
biopathpred/modules/: best_blast.py  configuration.py  existence_score_model.py  match_enzyme.py  result_summary.py
biopathpred/utils/: rename_sequence_label.py  rename_via_mapping.py
example_data/: 1_IAM1.fasta  2_TAM1.fasta  3_TAM2.fasta
example_output/match_enzyme_result/: GCF_000014005.1_ASM1400v1_genomic.txt
legacy/: call_mapping_analysis.py  call_match_enzyme.py  merge_annotation.py
notebooks/: MS_workflow.ipynb  build_blast_database.ipynb  rename_sequence_label.ipynb
pathway/database/: IAA_database_complete.dmnd
pathway/diagram/: IAA_pathway.drawio
pathway_example/diagram/: pathway.drawio
scripts/: output_analysis.py
scripts/output_analysis/: enzyme_mapping_analysis.py  model_plot.py  model_result.pickle  rename_via_mapping.py
src/: add_id.py  best_blast.py  convert_fasta_prokka.py  diff_annotation.py  existence_score_model.py  match_enzyme.py  merge_annotation.py  merge_kofam.py  parse_gff.py  parse_kofam.py  parse_ncbi_xml.py  pathway.py  pathway_prediction.py  run_blast.sh  run_prodigal.sh  run_prokka.sh  run_scripts.py  util.py
src/bcpip/: cli.py
src/bcpip/modules/: configuration.py  database_building.py  match_enzyme.py  parse_blastp_xml.py  pathway.py  result_summary.py
src/biopathpred/database_building/: filter_database.py
src/biopathpred/modules/: best_blast.py  existence_score_model.py  mapping_analysis.py  match_enzyme.py  parse_blastp_xml.py  parse_ncbi_xml.py  pathway.py  util.py  utils.py
src/biopathpred/utils/: rename_sequence_label.py  rename_via_mapping.py
src/database_building/: add_id.py  database_building.py  database_utils.py  filter_database.py  filter_partial_sequence.py  get_entry.py
src/database_buliding/: add_id.py  filter_database.py  filter_entry.py
src/legacy/: convert_fasta_prokka.py  parse_gff.py  parse_kofam.py
src/output_analysis/: adjust_coefficients_model.py  analyze_model_test_result.py  cytoscape_network_map.py  demonstrate_model_behavior.py  enzyme_mapping_analysis.py  fetch_name.py  generate_model_test.py  rename_sequence_label.py  rename_via_mapping.py
src/pathway/: pathway.drawio
tests/: conftest.py  test_data_building.py  test_database_building.py  test_match_enzyme.py  test_module_setup.py  test_output_analysis.py  test_parse_ncbi.py
tests/test_data/: 2_seq2.fasta  GCF_example.xml  GCF_match_enzyme_example.csv  fasta_sequence_example.fasta
tests/test_data/build_db/expected/: database.fasta
tests/test_data/build_db/test_data/: 1_seq1.fasta  seq.fasta
tests/test_data/enzyme_mapping_analysis/expected/: compound_output.csv  enzyme_output.csv  prediction_output.csv
tests/test_data/enzyme_mapping_analysis/test_data/: species2.txt  species3.txt
tests/test_data/expected/: database_no_fragment.fasta
tests/test_data/mapping_analysis/expected/: compound_output.csv  enzyme_output.csv
tests/test_data/mapping_analysis/test_data/: species1.txt
