[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "bcpip"
version = "1.1"
authors = [
  { name = "Zheng-Xiang Ye", email="b07613010@ntu.edu.tw"},
  { name="Steven Wu", email="stevenwu@ntu.edu.tw" },
]
description = "A bioinformatics pipeline to predict a bacterium's potential to produce specific biological compounds by mapping its genome against known metabolic pathways."
readme = "README.md"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "tqdm",
  "biopython",
  "numpy",
  "pandas",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.urls]
"Homepage" = "https://github.com/ComputationalAgronomy/bcpip"
"Issues" = "https://github.com/ComputationalAgronomy/bcpip/issues"

[project.entry-points.console_scripts]
bcpip = "bcpip.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.1.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
